--- a/extensions/iam/ssi/dataspaceconnector-configuration.properties
+++ b/extensions/iam/ssi/dataspaceconnector-configuration.properties
@@ -8,14 +8,15 @@
 #ssi.miw.jwksURL
 #ssi.miw.issuerUrl=
 ssi.miw.url=https://managed-identity-wallets.dev.demo.catena-x.net
-
+ssi.miw.did=did:indy:idunion:test:8E2bifh4jJaGwdp8Eiddy1
 
 ### Keycloak Settings
-ssi.miw.keycloak.url=https://catenaxdev003akssrv.germanywestcentral.cloudapp.azure.com/iamcentralidp/auth/realms/CX-Central
+ssi.miw.keycloak.url=https://catenaxdev003akssrv.germanywestcentral.cloudapp.azure.com/iamcentralidp/auth/realms/CX-Central/protocol/openid-connect/token\
+#ssi.miw.keycloak.url=https://catenaxdev003akssrv.germanywestcentral.cloudapp.azure.com/iamcentralidp/auth/realms/CX-Central
 ssi.miw.keycloak.username=service-account-client005-custiodiantest
-ssi.miw.keycloak.client_id=Client005-CustodianTest
-ssi.miw.keycloak.client_secret=Htv9MhV2rk6XM9zV54xdo2cwSMxFIBzU
-ssi.miw.keycloak.grand_type=client_credentials
+ssi.miw.keycloak.clientid=Client005-CustodianTest
+ssi.miw.keycloak.clientsecret=
+ssi.miw.keycloak.grandtype=client_credentials
 ssi.miw.keycloak.scope=openid
 
 ### AccessToken Settings
