--- a/extensions/iam/ssi/config-example.properties
+++ b/extensions/iam/ssi/config-example.properties
@@ -1,31 +1,27 @@
-### EDC Settings
-web.http.port=9191
+### HTTP Settings
+web.http.port=8181
 web.http.path=/api
-web.http.data.port=9192
+web.http.data.port=8182
 web.http.data.path=/api/v1/data
-web.http.ids.port=9292
-web.http.ids.path=/api/v1/ids
-
-edc.api.auth.key=password
-ids.webhook.address=http://localhost:9292
-edc.ids.id=urn:connector:consumer
+edc.samples.06.asset.path=/path/to/file
+ids.webhook.address=http://localhost:8282
+edc.ids.id=urn:connector:provider
 
 ### Connection Settings
 
 #Base Endpoint of the managed identity wallet
 ssi.miw.url=https://managed-identity-wallets.dev.demo.catena-x.net
 #DID of the EDC's Company
-ssi.miw.did=did:indy:idunion:test:test
+ssi.miw.did=did:indy:idunion:test:Tsp9tHsWeEaJyNqCoBw2ud
 #BPNL Number of the EDC's Company
-ssi.miw.bpn=BPNL123456789012
+ssi.miw.bpn=BPNL000000000005
 
 ### Keycloak Settings
-ssi.miw.accesstoken.url=https://centralidp.dev.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token
+ssi.miw.accesstoken.url=https://catenaxdev003akssrv.germanywestcentral.cloudapp.azure.com/iamcentralidp/auth/realms/CX-Central/protocol/openid-connect/token
 ssi.miw.keycloak.clientid=
 ssi.miw.keycloak.clientsecret=
 ssi.miw.keycloak.grandtype=client_credentials
 ssi.miw.keycloak.scope=openid
 
-### AccessToken Settings
+### Logger Settings
 ssi.miw.logprefix=ManagedIdentityWalletLogger
-
