--- a/samples/06.0-ssi-authentication/provider/dataspaceconnector-configuration.properties
+++ b/samples/06.0-ssi-authentication/provider/dataspaceconnector-configuration.properties
@@ -5,3 +5,22 @@ web.http.data.path=/api/v1/data
 edc.samples.06.asset.path=/path/to/file
 ids.webhook.address=http://localhost:8282
 edc.ids.id=urn:connector:provider
+
+### Connection Settings
+
+#Base Endpoint of the managed identity wallet
+ssi.miw.url=https://managed-identity-wallets.dev.demo.catena-x.net
+#DID of the EDC's Company
+ssi.miw.did=did:indy:idunion:test:test
+#BPNL Number of the EDC's Company
+ssi.miw.bpn=BPNL123456789013
+
+### Keycloak Settings
+ssi.miw.accesstoken.url=https://centralidp.dev.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token
+ssi.miw.keycloak.clientid=
+ssi.miw.keycloak.clientsecret=
+ssi.miw.keycloak.grandtype=client_credentials
+ssi.miw.keycloak.scope=openid
+
+### Logger Settings
+ssi.miw.logprefix=ManagedIdentityWalletLogger
