--- a/extensions/iam/ssi/config-example.properties
+++ b/extensions/iam/ssi/config-example.properties
@@ -16,7 +16,7 @@ ssi.miw.did=did:indy:idunion:test:Tsp9tHsWeEaJyNqCoBw2ud
 #BPNL Number of the EDC's Company
 ssi.miw.bpn=BPNL000000000005
 
-### Keycloak Settings
+### Keycloak Settings / OIDC-Settings
 ssi.miw.accesstoken.url=https://catenaxdev003akssrv.germanywestcentral.cloudapp.azure.com/iamcentralidp/auth/realms/CX-Central/protocol/openid-connect/token
 ssi.miw.keycloak.clientid=
 ssi.miw.keycloak.clientsecret=
